Fixed bug caused by focusout

--- a/roman-numeral-converter/index.html
+++ b/roman-numeral-converter/index.html
@@ -12,7 +12,7 @@
     <form action=''>
       <p>When in Rome! Numbers...</p>
       <input id='number' type='number' name='number' aria-label='Arabic Number'></input>
-      <button id='convert-btn'>Roman</button>
+      <button type='submit' id='convert-btn'>Roman</button>
     </form>
     <p id='output'></p>
     <script src='script.js'></script>
